2008-03-25  Miklos Szeredi <miklos@szeredi.hu>

	* Fix memory leaks on mount.  Patch by Szabolcs Szakacsits

2008-03-19  Miklos Szeredi <miklos@szeredi.hu>

	* Fix missing pthread_mutex_destroy in error path of
	fuse_lib_opendir().  Patch by Szabolcs Szakacsits

2008-03-07  Miklos Szeredi <miklos@szeredi.hu>

	* Add queuing on contention to per-node lock algorithm, to avoid
	starvation.

	* Only enable cancelation when reading a request, otherwise
	cancellation could happen with a mutex held, which could hang the
	process on umount

2008-02-08  Miklos Szeredi <miklos@szeredi.hu>

	* Block SIGCHLD when executing mount and umount

	* fusexmp_fh: avoid unnecessary seeking in readdir

	* Update kernel interface to 7.9:

	* Support receiving file handle from kernel in GETATTR request

	* Allow operations with a NULL path argument, if the filesystem
	supports it

	* Add support atomic open(O_TRUNC)

	* Support the st_blksize field in struct stat

	* If the "FUSE_THREAD_STACK" environment is set, initialize the
	stack size of threads by this value.  Patch by Florin Malita

	* Add per-node locking, instead of a global tree lock to protect
	the path from changing during operations.  Original patch by
	Rodrigo Castro

2008-02-03  Csaba Henk <csaba.henk@creo.hu>

	* lib/mount_bsd.c:
	- string formatting fixes
	- exit if mounting has failed
	  (in FreeBSD a mount failure is not critical per se, as the daemon
	  still could be mounted externally, but waiting for such an event
	  is more confusing than fruitful)
	- ditch the kvm(8) stuff and simply use forced unmount which just
	  won't block
	- prettify option specifications
	- add "-onosync_unmount" kernel option

2008-01-07  Csaba Henk <csaba.henk@creo.hu>

	* lib/mount_bsd.c:
	- refine device closing in a race-free way
	- add support for "-osubtype" on FreeBSD

	* makeconf.sh: make it work under FreeBSD

2008-01-03  Csaba Henk <csaba.henk@creo.hu>

	* lib/mount_bsd.c: close device before unmount