@@ -1,3 +1,9 @@
+2008-04-04  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Print library version information to debug output
+
+	* Highlevel lib: don't limit paths to 4095 characters
+
 2008-03-25  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix memory leaks on mount.  Patch by Szabolcs Szakacsits
